мелкий рефакторинг